# DemoRust

./: README.md
hello_world/: Cargo.toml
hello_world/src/: main.rs
projects/async_await/: Cargo.toml  Cargo.toml~
projects/async_read_keyboard/: Cargo.toml  Cargo.toml~
projects/bank/: Cargo.toml
projects/binSearch/: Cargo.toml
projects/biparit/: Cargo.toml
projects/calc/: Cargo.toml
projects/connect_4/: Cargo.toml
projects/const_fn/: Cargo.toml
projects/conway/: Cargo.toml
projects/coreTest/: Cargo.toml  Cargo.toml~
projects/drop_test/: Cargo.toml
projects/dyn_prog/: Cargo.toml
projects/ffd/: Cargo.toml
projects/functor/: Cargo.toml
projects/gnuplot/: Cargo.toml
projects/hashset_traits/: Cargo.toml
projects/het_list/: Cargo.toml
projects/insertion_sort/: Cargo.toml
projects/lambda_calc/: Cargo.toml
projects/lambda_calc_t/: Cargo.toml
projects/lifetime_demo/: Cargo.toml
projects/list_test/: Cargo.toml
projects/lotti_karotti/: Cargo.toml
projects/macro_test/: Cargo.toml
projects/max_sal/: Cargo.toml
projects/maximum/: Cargo.toml
projects/mem_test/: Cargo.toml
projects/merge_sort_par/: Cargo.toml
projects/merge_sort_par/src/: graph.gp  main.rs
projects/mutable_linked_list/: Cargo.toml
projects/natural_num/: Cargo.toml~
projects/pointer_fmt/: Cargo.toml
projects/prime/: Cargo.toml
projects/queens/: Cargo.toml
projects/quicksort/: Cargo.toml  Cargo.toml~
projects/random/: Cargo.toml
projects/reg/: Cargo.toml
projects/schiffeversenken/: Cargo.toml  Cargo.toml~
projects/serde_ex/: Cargo.toml  (+1 more)
(+127 files in other folders)
