[package]
name = "merge_sort_par"
version = "0.1.0"
authors = ["Richard Stewing <richard.stewing@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.6.3"
features = ["attributes", "unstable"]

[dependencies]
futures = "0.3.5"
